helloworld-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld
        subset: v1
        port:
          number: 5000
      weight: 50
    - destination:
        host: helloworld
        subset: v2
        port:
          number: 5000
      weight: 30
    - destination:
        host: helloworld
        subset: v3
        port:
          number: 5000
      weight: 20
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3

# apiVersion: networking.istio.io/v1
# kind: VirtualService
# metadata:
#   name: helloworld
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - helloworld-gateway
#   http:
#   - match:
#     - uri:
#         exact: /hello
#     route:
#     - destination:
#         host: helloworld
#         port:
#           number: 5000
